Fix Header covering content when printing articles #62211

--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -25,3 +25,12 @@
     left: 5px;
   }
 }
+
+@media print {
+  .site-header {
+    display: none; /* Header will be hide in print */
+  }
+  body {
+    margin-top: 0; /* article content will start from top  */
+  }
+}
